examples/test/testpolicy5562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5562
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key0: value9
      key23: value41
      key10: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value35
          key39: value25
      podSelector:
        matchLabels:
          key39: value30
          key47: value14
